withALB/kube-manifest5/webapp3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp3
  template:
    metadata:
      name: webapp3
      labels:
        app: webapp3
    spec:
      containers:
        - name: webapp3
          image: mohitknamdeo/mywebapp:5.0
          ports: 
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp3-nodeport-service
  labels:
    app: webapp3
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.php
spec:
  type: NodePort
  selector:
    app: webapp3
  ports:
    - port: 80
      targetPort: 80
